--- a/ggspp/web/public/style.css
+++ b/ggspp/web/public/style.css
@@ -560,6 +560,15 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.bg-red-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -567,4 +576,16 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.outline {
+  outline-style: solid;
+}
+
+.outline-1 {
+  outline-width: 1px;
+}
+
+.outline-red-500 {
+  outline-color: #ef4444;
 }
