--- a/ggspp/web/partial/sign-up-problem.ejs
+++ b/ggspp/web/partial/sign-up-problem.ejs
@@ -1,5 +1,6 @@
+<!-- todo: not dry, merge with sign-in-problem -->
 <div
-  id="sign-in-problem"
+  id="sign-up-problem"
   class="p-3 outline outline-1 outline-red-500 bg-red-900"
 >
   <p>🚫 <%= problem %></p>
