--- a/ggspp/web/views/sign-in.ejs
+++ b/ggspp/web/views/sign-in.ejs
@@ -1,7 +1,8 @@
+<!-- todo: refactor with form tag -->
 <div class="flex justify-center">
   <div class="flex flex-col w-1/2 space-y-4">
     <div class="flex justify-center">
-      <div class="text-2xl font-bold">Sign in to Foo</div>
+      <div class="text-2xl font-bold">Sign in to Ggspp</div>
     </div>
     <div id="sign-in-problem" style="margin: 0"></div>
     <div>
