--- a/ggspp/web/views/temp.ejs
+++ b/ggspp/web/views/temp.ejs
@@ -1,5 +1,12 @@
-<h1>temp temp temp</h1>
-<h1>temp temp temp</h1>
-<h1>temp temp temp</h1>
-<h1>temp temp temp</h1>
+<h1>domain</h1>
 
+<!-- todo: list of domains -->
+<!-- todo: validation -->
+<div id="asdf">nothing</div>
+
+<div id="domainCreateStatus" style="margin: 0"></div>
+
+<form hx-post="/domain-create" hx-target="#asdf">
+  <input id="domainCreateName" name="domainCreateName" type="text" />
+  <button type="submit">submit</button>
+</form>
