--- a/ggspp/web/public/style.css
+++ b/ggspp/web/public/style.css
@@ -534,6 +534,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
 .flex {
   display: flex;
 }
@@ -574,9 +578,18 @@ video {
   padding: 0.75rem;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -597,4 +610,8 @@ video {
 
 .outline-red-500 {
   outline-color: #ef4444;
+}
+
+.outline-blue-500 {
+  outline-color: #3b82f6;
 }
