fix graphical error when cookie expires

--- a/ggspp/web/views/_page.ejs
+++ b/ggspp/web/views/_page.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <script src="/htmx.min.js"></script>
-    <link rel="stylesheet" href="/style.css" type="text/css">
+    <link rel="stylesheet" href="/style.css" type="text/css" />
     <meta charset="UTF-8" />
     <title>ggspp</title>
   </head>
   <body>
-      <%- include(pageName, options) %>
+    <%- include(pageName, options) %>
   </body>
 </html>
