--- a/ggspp/web/views/domain.ejs
+++ b/ggspp/web/views/domain.ejs
@@ -1,1 +1,11 @@
 <h1><%= domain.name %></h1>
+
+<!-- <button
+  class="outline outline-1 outline-red-500"
+  hx-post="/domain-delete/<%= domain.id %>"
+  hx-confirm="Are you sure?"
+  hx-target="this"
+  hx-swap="none"
+>
+  delete
+</button> -->
