--- a/ggspp/web/views/temp.ejs
+++ b/ggspp/web/views/temp.ejs
@@ -1,18 +1,4 @@
-<div class="m-4">
-  <h1 class="text-xl font-bold">bookmarks</h1>
-
-  <form hx-post="/bookmark-create" hx-target="this" hx-swap="none">
-    <label for="bookmarkCreateDescription">Description:</label><br />
-    <input
-      id="bookmarkCreateDescription"
-      name="bookmarkCreateDescription"
-      type="text"
-    /><br />
-    <label for="bookmarkCreateUrl">Url:</label><br />
-    <input id="bookmarkCreateUrl" name="bookmarkCreateUrl" type="text" /><br />
-    <button type="submit">submit</button>
-  </form>
-</div>
+<a href="/bookmark-create">bookmark-create</a>
 
 <div class="m-4">
   <h1 class="text-xl font-bold">domains</h1>
