--- a/ggspp/web/views/bookmark-create.ejs
+++ b/ggspp/web/views/bookmark-create.ejs
@@ -14,6 +14,9 @@
     <label for="url">Url:</label><br />
     <input id="url" name="url" type="url" required /><br />
 
+    <label for="tags">Tags:</label><br />
+    <input id="tags" name="tags" type="text" /><br />
+
     <a href="/temp">go back</a>
     <button type="submit">submit</button>
   </form>
