--- a/service/fancypenosi/web/public/style.css
+++ b/service/fancypenosi/web/public/style.css
@@ -538,6 +538,11 @@ video {
   display: block;
 }
 
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
 .outline {
   outline-style: solid;
 }
