--- a/service/fancypenosi/web/static/style.css
+++ b/service/fancypenosi/web/static/style.css
@@ -538,6 +538,14 @@ video {
   margin: 1.25rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .block {
   display: block;
 }
@@ -568,14 +576,28 @@ video {
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .bg-amber-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(120 53 15 / var(--tw-bg-opacity));
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.bg-blue-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
+}
+
+.bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .text-3xl {
@@ -595,6 +617,30 @@ video {
   outline-width: 1px;
 }
 
+.outline-2 {
+  outline-width: 2px;
+}
+
 .outline-red-500 {
   outline-color: #ef4444;
+}
+
+.outline-blue-500 {
+  outline-color: #3b82f6;
+}
+
+.outline-green-500 {
+  outline-color: #22c55e;
+}
+
+input:invalid {
+  outline: 2px solid red;
+}
+
+input:valid ~ p {
+  display: none;
+}
+
+input:invalid ~ p {
+  display: block;
 }
