--- a/service/fancypenosi/tailwind.css
+++ b/service/fancypenosi/tailwind.css
@@ -2,13 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-input:invalid {
-    outline: 2px solid red;
-}
+/* input:valid {
+    border: 2px solid green;
+} */
 
-input:valid ~ p {
+/* input:valid ~ p {
     display: none;
 }
 input:invalid ~ p {
     display: block;
-}
+} */
