--- a/service/fancypenosi/web/static/style.css
+++ b/service/fancypenosi/web/static/style.css
@@ -538,10 +538,6 @@ video {
   margin: 1.25rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -576,18 +572,26 @@ video {
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
+.border-slate-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
 
 .bg-amber-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(120 53 15 / var(--tw-bg-opacity));
-}
-
-.bg-blue-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
 .bg-green-200 {
@@ -621,26 +625,31 @@ video {
   outline-width: 2px;
 }
 
-.outline-red-500 {
-  outline-color: #ef4444;
-}
-
-.outline-blue-500 {
-  outline-color: #3b82f6;
-}
-
 .outline-green-500 {
   outline-color: #22c55e;
 }
 
-input:invalid {
-  outline: 2px solid red;
+.outline-red-500 {
+  outline-color: #ef4444;
 }
 
-input:valid ~ p {
-  display: none;
-}
+/* input:valid {
+    border: 2px solid green;
+} */
 
+/* input:valid ~ p {
+    display: none;
+}
 input:invalid ~ p {
-  display: block;
+    display: block;
+} */
+
+.valid\:border-green-300:valid {
+  --tw-border-opacity: 1;
+  border-color: rgb(134 239 172 / var(--tw-border-opacity));
+}
+
+.valid\:border-green-500:valid {
+  --tw-border-opacity: 1;
+  border-color: rgb(34 197 94 / var(--tw-border-opacity));
 }
