--- a/service/fancypenosi/web/static/style.css
+++ b/service/fancypenosi/web/static/style.css
@@ -534,8 +534,8 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.m-5 {
-  margin: 1.25rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .mt-2 {
@@ -550,8 +550,12 @@ video {
   display: flex;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
+.h-full {
+  height: 100%;
+}
+
+.w-2\/5 {
+  width: 40%;
 }
 
 .w-full {
@@ -580,6 +584,10 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .border-2 {
   border-width: 2px;
 }
@@ -589,14 +597,17 @@ video {
   border-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
 
-.bg-amber-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(120 53 15 / var(--tw-bg-opacity));
-}
-
 .bg-green-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(187 247 208 / var(--tw-bg-opacity));
+}
+
+.bg-white\/75 {
+  background-color: rgb(255 255 255 / 0.75);
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .py-2 {
@@ -617,10 +628,6 @@ video {
   outline-style: solid;
 }
 
-.outline-1 {
-  outline-width: 1px;
-}
-
 .outline-2 {
   outline-width: 2px;
 }
@@ -629,24 +636,26 @@ video {
   outline-color: #22c55e;
 }
 
-.outline-red-500 {
-  outline-color: #ef4444;
+.backdrop-blur-sm {
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-/* input:valid {
-    border: 2px solid green;
-} */
-
-/* input:valid ~ p {
-    display: none;
+html, body {
+  height: 100%;
+  margin: 0;
 }
-input:invalid ~ p {
-    display: block;
-} */
 
-.valid\:border-green-300:valid {
-  --tw-border-opacity: 1;
-  border-color: rgb(134 239 172 / var(--tw-border-opacity));
+#bg-canvas {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  border: none;
+  pointer-events: none;
 }
 
 .valid\:border-green-500:valid {
