--- a/service/fancypenosi/tailwind.css
+++ b/service/fancypenosi/tailwind.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-#bg-canvas {
+#bg-iframe {
     position: fixed;
     width: 100%;
     height: 100%;
