--- a/service/fancypenosi/web/static/style.css
+++ b/service/fancypenosi/web/static/style.css
@@ -642,7 +642,7 @@ video {
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-#bg-canvas {
+#bg-iframe {
   position: fixed;
   width: 100%;
   height: 100%;
