--- a/service/wokejak/tailwind.css
+++ b/service/wokejak/tailwind.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    overflow-x: hidden;
+}
+
 #bg-iframe {
     position: fixed;
     width: 100%;
@@ -12,3 +16,36 @@
     border: none;
     pointer-events: none;
 }
+
+.box {
+    content: "";
+    display: block;
+    margin: auto;
+    width: 100px;
+    height: 100px;
+}
+
+.box-wrapper {
+    width: 200vw;
+
+    transition-duration: 600ms;
+
+    /* transform: translate(-50vw); */
+    /* -webkit-transition-duration: 600ms; */
+}
+
+.box-wrapper.first {
+
+    /* transform: translate(100%); */
+    transform: translate(0vw);
+    /* -webkit-transform: translate(100%);     */
+}
+
+.box-wrapper.second {
+    transform: translate(-100vw);
+}
+
+/* .loading {
+    transform: translate(1vw);
+    -webkit-transform: translate(100%);    
+} */
