--- a/service/wokejak/tailwind.css
+++ b/service/wokejak/tailwind.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+    height: 100%;
+    margin: 0;
+}
+
 body {
     overflow-x: hidden;
 }
@@ -17,35 +23,31 @@ body {
     pointer-events: none;
 }
 
-.box {
+.carousel-item {
     content: "";
-    display: block;
-    margin: auto;
-    width: 100px;
-    height: 100px;
+    width: 100vw;
+    /* display: block; */
+    /* margin: auto; */
+    /* height: 100%; */
 }
 
-.box-wrapper {
-    width: 200vw;
+#carousel {
+    width: 300vw;
 
     transition-duration: 600ms;
-
-    /* transform: translate(-50vw); */
     /* -webkit-transition-duration: 600ms; */
 }
 
-.box-wrapper.first {
-
-    /* transform: translate(100%); */
+#carousel.first {
     transform: translate(0vw);
     /* -webkit-transform: translate(100%);     */
 }
 
-.box-wrapper.second {
+#carousel.second {
     transform: translate(-100vw);
 }
 
-/* .loading {
-    transform: translate(1vw);
-    -webkit-transform: translate(100%);    
-} */
+#carousel.third {
+    transform: translate(-200vw);
+
+}
