--- a/service/wokejak/web/public/style/main.css
+++ b/service/wokejak/web/public/style/main.css
@@ -534,6 +534,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.m-10 {
+  margin: 2.5rem;
+}
+
 .mr-20 {
   margin-right: 5rem;
 }
@@ -546,36 +550,45 @@ video {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
+}
+
+.grid-flow-col {
+  grid-auto-flow: column;
 }
 
 .justify-center {
   justify-content: center;
 }
 
+.justify-stretch {
+  justify-content: stretch;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
 .border-b {
   border-bottom-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
 }
 
 .border-slate-500 {
   --tw-border-opacity: 1;
   border-color: rgb(100 116 139 / var(--tw-border-opacity));
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-green-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-slate-900\/75 {
@@ -616,6 +629,12 @@ video {
   transition-duration: 150ms;
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
   overflow-x: hidden;
 }
@@ -631,35 +650,32 @@ body {
   pointer-events: none;
 }
 
-.box {
+.carousel-item {
   content: "";
-  display: block;
-  margin: auto;
-  width: 100px;
-  height: 100px;
+  width: 100vw;
+  /* display: block; */
+  /* margin: auto; */
+  /* height: 100%; */
 }
 
-.box-wrapper {
-  width: 200vw;
+#carousel {
+  width: 300vw;
   transition-duration: 600ms;
-  /* transform: translate(-50vw); */
   /* -webkit-transition-duration: 600ms; */
 }
 
-.box-wrapper.first {
-  /* transform: translate(100%); */
+#carousel.first {
   transform: translate(0vw);
   /* -webkit-transform: translate(100%);     */
 }
 
-.box-wrapper.second {
+#carousel.second {
   transform: translate(-100vw);
 }
 
-/* .loading {
-    transform: translate(1vw);
-    -webkit-transform: translate(100%);    
-} */
+#carousel.third {
+  transform: translate(-200vw);
+}
 
 .hover\:text-sky-300:hover {
   --tw-text-opacity: 1;
