--- a/service/wokejak/tailwind.css
+++ b/service/wokejak/tailwind.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Tektur&display=swap');
+
 html,
 body {
     height: 100%;
@@ -24,16 +26,17 @@ body {
 }
 
 .carousel-item {
-    content: "";
     width: 100vw;
+    margin: 2.5rem;
+    /* content: ""; */
     /* display: block; */
     /* margin: auto; */
     /* height: 100%; */
 }
 
+
 #carousel {
     width: 300vw;
-
     transition-duration: 600ms;
     /* -webkit-transition-duration: 600ms; */
 }
