--- a/service/wokejak/web/public/style/main.css
+++ b/service/wokejak/web/public/style/main.css
@@ -538,6 +538,14 @@ video {
   position: static;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .mr-20 {
   margin-right: 5rem;
 }
@@ -550,10 +558,6 @@ video {
   display: flex;
 }
 
-.grid {
-  display: grid;
-}
-
 .hidden {
   display: none;
 }
@@ -562,17 +566,13 @@ video {
   width: 22px;
 }
 
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
 .w-\[36px\] {
   width: 36px;
 }
 
-.grid-flow-col {
-  grid-auto-flow: column;
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .flex-col {
@@ -587,16 +587,8 @@ video {
   justify-content: center;
 }
 
-.justify-between {
-  justify-content: space-between;
-}
-
 .justify-around {
   justify-content: space-around;
-}
-
-.justify-stretch {
-  justify-content: stretch;
 }
 
 .gap-10 {
@@ -607,12 +599,12 @@ video {
   gap: 0.5rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .overflow-scroll {
@@ -667,6 +659,10 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .font-serif {
   font-family: Fredoka, ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
@@ -676,19 +672,24 @@ video {
   line-height: 2rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .text-9xl {
   font-size: 8rem;
   line-height: 1;
 }
 
-.text-xl {
-  font-size: 1.25rem;
+.text-lg {
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-extrabold {
@@ -740,15 +741,6 @@ body {
   pointer-events: none;
 }
 
-.carousel-item {
-  width: 100vw;
-  margin: 2.5rem;
-  /* content: ""; */
-  /* display: block; */
-  /* margin: auto; */
-  /* height: 100%; */
-}
-
 #carousel {
   width: 300vw;
   transition-duration: 600ms;
@@ -766,6 +758,19 @@ body {
 
 #carousel.third {
   transform: translate(-200vw);
+}
+
+.carousel-item {
+  width: 100vw;
+  margin: 2.5rem;
+  /* content: ""; */
+  /* display: block; */
+  /* margin: auto; */
+  /* height: 100%; */
+}
+
+.hideWebkitScrollbar::-webkit-scrollbar {
+  display: none;
 }
 
 .hover\:text-sky-300:hover {
