--- a/service/fancypenosi/web/public/style/sign-up.css
+++ b/service/fancypenosi/web/public/style/sign-up.css
@@ -15,11 +15,11 @@ body {
     /* -webkit-transition-duration: 600ms; */
 }
 
-#carousel.sign-in {
+#carousel.first {
     transform: translate(0vw);
 }
 
-#carousel.sign-up {
+#carousel.second {
     transform: translate(-100vw);
     /* -webkit-transform: translate(100%);     */
 }
