--- a/service/fancypenosi/web/partial/sign-in.html
+++ b/service/fancypenosi/web/partial/sign-in.html
@@ -2,12 +2,10 @@
 
 <div class="h-full w-[100vw] flex justify-center items-center">
     <div class="w-2/5 p-5 bg-white/75 rounded-lg backdrop-blur-sm">
-        <div class="flex justify-center">
-            <button {{ if eq .accountAction "sign-in" }} id="focus-second" {{ else }} id="focus-first" {{ end }}
-                type="button">
-                Don't have an account? Sign up
-            </button>
-        </div>
+        <button {{ if eq .accountAction "sign-in" }} id="focus-second" {{ else }} id="focus-first" {{ end }}
+            type="button" class="text-center">
+            Don't have an account? Sign up
+        </button>
     </div>
 </div>
 
