--- a/service/fancypenosi/web/partial/sign-up.html
+++ b/service/fancypenosi/web/partial/sign-up.html
@@ -9,15 +9,15 @@
         <form id="sign-up-form">
             <div class="flex flex-col space-y-5">
                 <div>
-                    <label class="font-bold" for="email">Email:</label>
-                    <input class="w-full rounded border-2 border-slate-300 valid:border-green-500" id="email"
-                        name="email" type="email" required />
+                    <label class="font-bold" for="sign-up-email">Email:</label>
+                    <input class="w-full rounded border-2 border-slate-300 valid:border-green-500" id="sign-up-email"
+                        name="sign-up-email" type="email" required />
                 </div>
 
                 <div>
-                    <label class="font-bold" for="password">Password:</label>
-                    <input class="w-full rounded border-2 border-slate-300 valid:border-green-500" id="password"
-                        name="password" type="password" required />
+                    <label class="font-bold" for="sign-up-password">Password:</label>
+                    <input class="w-full rounded border-2 border-slate-300 valid:border-green-500" id="sign-up-password"
+                        name="sign-up-password" type="password" required />
                 </div>
 
                 <div>
@@ -28,16 +28,16 @@
                         name="confirm-password" type="password" required />
                 </div>
 
-                <button id="submit" class="py-2 bg-green-200 outline outline-2 outline-green-500 rounded-full"
+                <button id="sign-up-submit" class="py-2 bg-green-200 outline outline-2 outline-green-500 rounded-full"
                     type="submit">
                     Sign Up
                 </button>
 
-                <div id="error" class="p-3 outline outline-1 outline-red-500 bg-red-200 hidden">
-                    🚫 <span id="error-text"></span>
+                <div id="sign-up-error" class="p-3 outline outline-1 outline-red-500 bg-red-200 hidden">
+                    🚫 <span id="sign-up-error-text"></span>
                 </div>
 
-                <div id="success" class="p-3 outline outline-1 outline-green-500 bg-green-200 hidden">
+                <div id="sign-up-success" class="p-3 outline outline-1 outline-green-500 bg-green-200 hidden">
                     ✅ <span>Account created successfully!</span>
                 </div>
 
