--- a/service/fancypenosi/web/public/style/sign-up.css
+++ b/service/fancypenosi/web/public/style/sign-up.css
@@ -16,11 +16,11 @@ body {
 }
 
 #carousel.first {
-    transform: translate(0vw);
+    transform: translateX(0vw);
 }
 
 #carousel.second {
-    transform: translate(-100vw);
+    transform: translateX(-100vw);
     /* -webkit-transform: translate(100%);     */
 }
 
