--- a/service/fancypenosi/web/public/style/sign-up.css
+++ b/service/fancypenosi/web/public/style/sign-up.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
 }
@@ -9,21 +10,27 @@ body {
 }
 
 #carousel {
-    /* width: 200vw; */
-    /* height: 200vh; */
-    transition-duration: 600ms;
+    transition-duration: 1000ms;
     /* -webkit-transition-duration: 600ms; */
 }
 
-#carousel.first {
-    transform: translateX(0vw);
+#carousel.carousel-sign-in {
+    transform: translate(0vw, 0vh);
 }
 
-#carousel.second {
-    transform: translateX(-100vw);
+#carousel.carousel-sign-up {
+    transform: translate(-100vw, 0vh);
     /* -webkit-transform: translate(100%);     */
 }
 
-#carousel.retracted {
-    transform: translateY(100vh);
+#carousel.carousel-sign-in-below {
+    transform: translate(0vw, 100vh);
+}
+
+#carousel.carousel-sign-up-below {
+    transform: translate(-100vw, 100vh);
+}
+
+#carousel.carousel-sign-in-above {
+    transform: translate(0vw, -100vh);
 }
