--- a/service/fancypenosi/tailwind.css
+++ b/service/fancypenosi/tailwind.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    opacity: 0;
+    transition: opacity 2s;
+}
+
 #bg-iframe {
     position: fixed;
     width: 100%;
