--- a/service/fancypenosi/web/public/style/main.css
+++ b/service/fancypenosi/web/public/style/main.css
@@ -566,6 +566,14 @@ video {
   width: 100%;
 }
 
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-\[640px\] {
+  width: 640px;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -690,4 +698,10 @@ body {
 .valid\:border-green-500:valid {
   --tw-border-opacity: 1;
   border-color: rgb(34 197 94 / var(--tw-border-opacity));
+}
+
+@media (min-width: 1024px) {
+  .lg\:w-\[640px\] {
+    width: 640px;
+  }
 }
