--- a/service/fancypenosi/web/partial/navigator.html
+++ b/service/fancypenosi/web/partial/navigator.html
@@ -1,7 +1,11 @@
-<ul class="bg-green-800">
-    <li>email: {{ .email }}</li>
-    <li>item 1</li>
-    <li>item 2</li>
-    <li>item 3</li>
-    <li>item 4</li>
-</ul>
+<div id="toolbar">
+    <div></div>
+
+    <div id="menu-btn">
+        <i class="gg-menu"></i>
+    </div>
+</div>
+
+<div id="drawer" style="display: none;">
+    <div>tools</div>
+</div>
