--- a/service/fancypenosi/web/public/style/registrar.css
+++ b/service/fancypenosi/web/public/style/registrar.css
@@ -1,12 +1,17 @@
-html,
-body {
-    height: 100%;
-    margin: 0;
-}
-
 body {
     overflow-x: hidden;
     overflow-y: hidden;
+}
+
+#bg-iframe {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    border: none;
+    pointer-events: none;
 }
 
 #fader.fader-below {
