--- a/service/fancypenosi/web/public/style/main.css
+++ b/service/fancypenosi/web/public/style/main.css
@@ -538,6 +538,10 @@ video {
   margin-top: 0.25rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .block {
   display: block;
 }
@@ -582,6 +586,10 @@ video {
   width: 100%;
 }
 
+.w-\[300vw\] {
+  width: 300vw;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -596,6 +604,10 @@ video {
 
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .rounded {
